correccion texto de userAdminMenu()

--- a/unidad-1/U10.html
+++ b/unidad-1/U10.html
@@ -664,7 +664,7 @@ function userAdminMenu()
             `1. Ver usuarios\n` +
             `2. Agregar usuario\n` +
             `3. Eliminar usuario\n` +
-            `4. Cambiar categoría de usuario\n` +
+            `4. Editar usuario\n` +
             `X. Volver`
         );
 
