--- a/unidad-3/calculadora/main.html
+++ b/unidad-3/calculadora/main.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <script type="module" src="./main.js"></script>
+    <calculator-component></calculator-component>
 </body>
 </html>
